# ssd-face

./: .gitignore  CMakeLists.txt  README.md  create_all.py  demo.py
src/: FaceDetector.cpp  FaceDetector.h  config.h  main.cpp
